--- a/workshop14/src/main/resources/templates/listContact.html
+++ b/workshop14/src/main/resources/templates/listContact.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Compiled and minified CSS -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      
     <title>Document</title>
 </head>
 <body>
-    <h1>List of contacts</h1>
+    <nav>
+    <div class="nav-wrapper">
+        <a href="#" class="brand-logo">Address book</a>
+    </div>
+    </nav>
+    <h2>List of contacts</h2>
     <br>
-    <table border=1>
+    <table class="collection" border=1>
+        <tr>
+            <td >Name</td>
+            <td >Email</td>
+            <td >Phone Number</td>
+            <td >Date of Birth</td>
+        </tr>
         <tr data-th-each="contact :${contacts}">
             <td data-th-text="${contact.name}"></td>
             <td data-th-text="${contact.email}"></td>
